Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18086

mistakes in page_pools

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • 3
    • 9223372036854775807

      Working on CSDC that actively uses page_pools with order higher than 0 I found a bunch of problems that might cause OOM or different memory issues. I'll send several patches addressing these issues here.

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: